--- a/src/styles/accommodation.css
+++ b/src/styles/accommodation.css
@@ -29,7 +29,6 @@
   margin-bottom: 16px;
 }
 .data-container {
-  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
