--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -86,4 +86,14 @@ body {
   font-size: 1rem;
   font-weight: 500;
   color: #ff6060;
+  display: flex;
+}
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+main {
+  flex-grow: 1;
 }
